--- a/index.html
+++ b/index.html
@@ -199,6 +199,7 @@
     </div>
 
     <!-- Panggil JavaScript -->
-    <script src="js/script.js"></script>
+    ...
+    <script src="script.js"></script>
   </body>
 </html>
